improved importer